# aiogram-sqlalchemy

./: .dockerignore  .env.dist  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 2023_09_03_0324_initial_migration.py  2023_09_06_1517_creeate_base_model_wiith_models.py  2023_09_06_1522_added_big_inteeger_to_the_author_.py  2023_09_06_1527_added_big_inteeger_to_the_author_.py
bot/: __main__.py  config.py  misc.py
bot/db/: db.py
bot/filters/: admin.py
bot/handlers/: admin.py
bot/models/: __init__.py  admin.py  author.py
bot/repositories/: admin.py  author.py
bot/schemas/: __init__.py  admin.py
bot/services/: admin.py
bot/utils/: dependencies.py  repository.py
buildfiles/: Dockerfile
src/: config.py
src/bot/: __main__.py  misc.py
src/bot/filters/: admin.py
src/bot/handlers/: admin.py  author.py
src/bot/keyboards/: admin.py
src/bot/repositories/: admin.py  author.py
src/bot/services/: admin.py
src/bot/utils/: dependencies.py
src/db/: __init__.py  db.py  dependencies.py
src/db/models/: __init__.py  admin.py  author.py
src/db/repositories/: admin.py  author.py  repository.py
src/db/schemas/: author.py
src/db/services/: admin.py
tests/: conftest.py
