[tool.poetry]
name = "aiogram-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Daniil <39118675+TyPaporotnyk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aiogram_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.1"
click = "^8.1.7"
aiogram = "^3.0.0"
pydantic-settings = "^2.0.3"
aioredis = "^2.0.1"
redis = "^5.0.0"
arq = "^0.25.0"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-asyncio = "^0.20.3"
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
